// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine golden master (demo dataset, UDS) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 3238,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6786,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "product_dead",
      "member": "Cacahuates 100g",
      "metricId": "venta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1547,
      "insightTypeId": "meta_gap_temporal",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2806,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 12003,
      "insightTypeId": "stock_risk",
      "member": "Té Helado 500ml",
      "metricId": "inventario",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 346,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.244,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "categoria",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 150.98,
      "impactoValorRounded": -1780,
      "insightTypeId": "contribution",
      "member": "Snacks",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "venta",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 11,
      "candidatesTotal": 197,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 109,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 15,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 102,
        "special_builder": 94,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.907,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:product_dead:producto:venta:Cacahuates 100g",
            "portfolioRank": 8,
            "portfolioScore": 0.713,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
            "portfolioRank": 2,
            "portfolioScore": 0.836,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
            "portfolioRank": 3,
            "portfolioScore": 0.732,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:stock_risk:producto:inventario:Té Helado 500ml",
            "portfolioRank": 9,
            "portfolioScore": 0.677,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 9,
        "regularCap": 6,
        "regularCount": 132,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 6,
          "special_builder": 5,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 50,
          "inputCount": 197,
          "outputCount": 147,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 102,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 132,
          "inputCount": 147,
          "outputCount": 15,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 95,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 1,
        "cliente": 2,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 4,
        "MEDIA": 2,
      },
      "passRate": 0.727,
      "total": 8,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "categoria": 1,
        "cliente": 5,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 1,
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
        "trend": 1,
      },
      "bySeverity": {
        "ALTA": 4,
        "BAJA": 4,
        "MEDIA": 3,
      },
      "total": 11,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 6,
        "special_builder": 5,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.907,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:product_dead:producto:venta:Cacahuates 100g",
          "portfolioRank": 8,
          "portfolioScore": 0.713,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
          "portfolioRank": 2,
          "portfolioScore": 0.836,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
          "portfolioRank": 3,
          "portfolioScore": 0.732,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:stock_risk:producto:inventario:Té Helado 500ml",
          "portfolioRank": 9,
          "portfolioScore": 0.677,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 50,
          "inputCount": 197,
          "outputCount": 147,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 8,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 3,
          "inputCount": 11,
          "outputCount": 8,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 102,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 132,
          "inputCount": 147,
          "outputCount": 15,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 8,
          "outputCount": 8,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 95,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 8,
        "candidatesRejectedByGate": 3,
        "candidatesReturned": 11,
        "chains": 0,
        "diagnosticBlocks": 8,
        "enrichedBlocks": 8,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 8,
      },
    },
  },
}
`;

exports[`insight-engine golden master (demo dataset, USD) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "product_dead",
      "member": "Chicharrón 120g",
      "metricId": "venta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 2871,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.7784,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 25355,
      "insightTypeId": "stock_risk",
      "member": "Queso Fresco 400g",
      "metricId": "inventario",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 639,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.2796,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "unidades",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 303.88,
      "impactoValorRounded": 1210,
      "insightTypeId": "contribution",
      "member": "María Castillo",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 11,
      "candidatesTotal": 204,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 116,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 14,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 108,
        "special_builder": 95,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
            "portfolioRank": 8,
            "portfolioScore": 0.713,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.925,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "high_confidence",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:stock_risk:producto:inventario:Queso Fresco 400g",
            "portfolioRank": 9,
            "portfolioScore": 0.677,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
            "portfolioRank": 2,
            "portfolioScore": 0.732,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "motor2_registry_loop:migration:cliente:venta:Super Económico",
            "portfolioRank": 10,
            "portfolioScore": 0.655,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 8,
        "regularCap": 6,
        "regularCount": 142,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 7,
          "special_builder": 4,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 47,
          "inputCount": 204,
          "outputCount": 157,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 108,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 143,
          "inputCount": 157,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 96,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "cliente": 2,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 3,
        "MEDIA": 2,
      },
      "passRate": 0.636,
      "total": 7,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "cliente": 6,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 2,
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
        "trend": 1,
      },
      "bySeverity": {
        "ALTA": 4,
        "BAJA": 3,
        "MEDIA": 4,
      },
      "total": 11,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 7,
        "special_builder": 4,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
          "portfolioRank": 8,
          "portfolioScore": 0.713,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.925,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "high_confidence",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:stock_risk:producto:inventario:Queso Fresco 400g",
          "portfolioRank": 9,
          "portfolioScore": 0.677,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
          "portfolioRank": 2,
          "portfolioScore": 0.732,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "motor2_registry_loop:migration:cliente:venta:Super Económico",
          "portfolioRank": 10,
          "portfolioScore": 0.655,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 47,
          "inputCount": 204,
          "outputCount": 157,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 7,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 4,
          "inputCount": 11,
          "outputCount": 7,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 108,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 143,
          "inputCount": 157,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 7,
          "outputCount": 7,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 96,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 7,
        "candidatesRejectedByGate": 4,
        "candidatesReturned": 11,
        "chains": 0,
        "diagnosticBlocks": 7,
        "enrichedBlocks": 7,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 7,
      },
    },
  },
}
`;
